--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ python-dotenv
 pandas
 pyodbc
 python-dateutil
+-e git+https://github.com/LCBRU/lbrc_edge.git@main#egg=lbrc_edge
+-e git+https://github.com/LCBRU/lbrc_flask.git@main#egg=lbrc_flask
